# clevenshtein

./: .clang-format  CMakeLists.txt  README.md  levenshtein.c  levenshtein.h
.devcontainer/: devcontainer.json
cmake/: config.cmake.in
example/: CMakeLists.txt  main.c
